simple REPL working

--- a/TraceShell/TraceShell.fsproj
+++ b/TraceShell/TraceShell.fsproj
@@ -6,7 +6,12 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Compile Include="Library.fs" />
+    <Compile Include="REPL.fs" />
+    <Compile Include="FsEval.fs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FSharp.Compiler.Service" />
   </ItemGroup>
 
 </Project>
