--- a/TraceShell/TraceShell.fsproj
+++ b/TraceShell/TraceShell.fsproj
@@ -3,11 +3,13 @@
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <GenerateDocumentationFile>true</GenerateDocumentationFile>
+    <PublishAot>true</PublishAot>
   </PropertyGroup>
 
   <ItemGroup>
     <Compile Include="REPL.fs" />
     <Compile Include="FsEval.fs" />
+    <Compile Include="ReadLine.fs" />
   </ItemGroup>
 
   <ItemGroup>
